--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A processing pipeline to produce dynamic spectra from ATCA and AS
 authors = ["Joshua Pritchard <joshua.pritchard@sydney.edu.au>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">3.9,<3.12"
 click = "^8.0.3"
 astropy = "^5.0.1"
 pandas = "^1.4.1"
@@ -13,6 +13,9 @@ matplotlib = "^3.5.1"
 python-casacore = "^3.4.0"
 numpy = "^1.22.2"
 colorlog = "^6.7.0"
+dask = {extras = ["complete"], version = "^2023.2.1"}
+ragavi = "^0.5.2"
+scipy = "^1.9.3"
 
 [tool.poetry.dev-dependencies]
 
@@ -23,6 +26,8 @@ dstools-rotate = "dstools.cli.fix_phasecentre:main"
 dstools-avg-baselines = "dstools.cli.avg_baselines:main"
 dstools-make-dspec = "dstools.cli.make_dspec:main"
 dstools-plot-dspec = "dstools.cli.plot_dspec:main"
+dstools-remove-offaxis = "dstools.cli.remove_offaxis:main"
+dstools-diagnostics = "dstools.cli.plot_diagnostics:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
