--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,44 @@ mypy = "^1.8.0"
 pytest-mock = "^3.12.0"
 pytest-cov = "^4.1.0"
 
+[tool.black]
+line-length = 88
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+| \.hg
+| \.mypy_cache
+| \.tox
+| \.venv
+| _build
+| buck-out
+| build
+| dist
+)/
+'''
+
+[tool.isort]
+line_length = 88
+profile = "black"
+include_trailing_comma = true
+
+[tool.pyright]
+reportMissingTypeStubs = false
+reportGeneralTypeIssues = false
+reportOptionalSubscript = false
+reportOptionalMemberAccess = false
+
+[tool.mypy]
+
+[[tool.mypy.overrides]]
+module = "pandas.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "astropy.*"
+ignore_missing_imports = true
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
