--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A processing pipeline to produce dynamic spectra from ATCA and AS
 authors = ["Joshua Pritchard <joshua.pritchard@sydney.edu.au>"]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">3.9,<4.0"
 click = "^8.0.3"
 matplotlib = "^3.8.2"
 numpy = "^1.22.2"
