--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dask = {extras = ["complete"], version = "^2023.2.1"}
 scipy = "^1.9.3"
 astropy = "^6.0.0"
 pandas = "2.1.4"
-python-casacore = "3.5.1"
+astroutils = {git = "https://joshoewahp@github.com/joshoewahp/astroutils.git", rev = "main"}
 
 [tool.poetry.dev-dependencies]
 
