--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ scipy = "^1.9.3"
 astropy = "^6.0.0"
 pandas = "2.1.4"
 astroutils = {git = "https://joshoewahp@github.com/joshoewahp/astroutils.git", rev = "main"}
+python-casacore = "3.5.1"
 
 [tool.poetry.dev-dependencies]
 
