--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "dstools"
 version = "1.0.0"
-description = "A processing pipeline to produce dynamic spectra from ATCA and ASKAP visibilities."
-authors = ["Joshua Pritchard <joshua.pritchard@sydney.edu.au>"]
+description = "A processing pipeline to produce dynamic spectra from visibilities."
+authors = ["Joshua Pritchard <joshua.pritchard@csiro.au>"]
 
 [tool.poetry.dependencies]
 python = ">3.10,<4.0"
@@ -21,14 +21,16 @@ h5py = "^3.11.0"
 [tool.poetry.dev-dependencies]
 
 [tool.poetry.scripts]
-dstools-cal = "dstools.cli.cal:main"
 dstools-askap-preprocess = "dstools.cli.askap_preprocess:main"
+dstools-cal = "dstools.cli.cal:main"
 dstools-remove-source = "dstools.cli.remove_source:main"
 dstools-model-field = "dstools.cli.model_field:main"
-dstools-rotate = "dstools.cli.fix_phasecentre:main"
-dstools-avg-baselines = "dstools.cli.avg_baselines:main"
+dstools-subtract-model = "dstools.cli.subtract_model:main"
 dstools-extract-ds = "dstools.cli.extract_ds:main"
 dstools-plot-ds = "dstools.cli.plot_ds:main"
+_dstools-avg-baselines = "dstools.cli.avg_baselines:main"
+_dstools-combine-spws = "dstools.cli.combine_spws:main"
+_dstools-rotate = "dstools.cli.fix_phasecentre:main"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
