--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,10 @@ description = "A processing pipeline to produce dynamic spectra from visibilitie
 authors = ["Joshua Pritchard <joshua.pritchard@csiro.au>"]
 
 [tool.poetry.dependencies]
-python = ">3.10,<4.0"
+python = "^3.10"
 click = "^8.0.3"
 matplotlib = "^3.8.2"
 numpy = "^1.22.2"
-colorlog = "^6.8.2"
-dask = {extras = ["complete"], version = "^2023.2.1"}
 scipy = "^1.9.3"
 astropy = "^6.0.0"
 pandas = "2.1.4"
@@ -18,9 +16,8 @@ astroutils = {git = "https://joshoewahp@github.com/joshoewahp/astroutils.git", r
 python-casacore = "3.5.1"
 h5py = "^3.11.0"
 
-[tool.poetry.dev-dependencies]
-
 [tool.poetry.scripts]
+dstools-setup = "dstools.cli.setup:main"
 dstools-askap-preprocess = "dstools.cli.askap_preprocess:main"
 dstools-cal = "dstools.cli.cal:main"
 dstools-remove-source = "dstools.cli.remove_source:main"
